fixed footer being cut off in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import "normalize.css";
+@import "./normalize.css";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 /* global */
@@ -187,7 +187,9 @@ body {
 .footer {
   position: fixed;
   bottom: 0;
-  height: 30px;
+  left: 0;
+  right: 0;
+  height: 40px;
   width: 100vw;
   background-color: #ffffff;
   border-top: var(--border);
@@ -197,6 +199,7 @@ body {
 
 .footer__copyright {
   margin: 10px auto;
+  font-size: clamp(10px, 16px, 18px);
 }
 
 a {
